--- a/Maps/package.json
+++ b/Maps/package.json
@@ -11,18 +11,26 @@
     "react": "16.0.0-alpha.12",
     "react-addons-update": "^15.6.2",
     "react-native": "0.47.1",
+    "react-native-google-places": "^2.5.0",
     "react-native-maps": "^0.15.2",
     "react-native-router-flux": "^4.0.0-beta.31",
+    "react-native-spinkit": "^1.1.1",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-socket.io": "^1.4.0",
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
     "react-test-renderer": "16.0.0-alpha.12",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6"
   },
   "jest": {
