--- a/Maps/package.json
+++ b/Maps/package.json
@@ -15,6 +15,7 @@
     "react-native-maps": "^0.15.2",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-spinkit": "^1.1.1",
+    "react-native-star-rating": "^1.0.9",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
